# rustgf

./: Cargo.toml  README.md
src/: example.rs  lib.rs
src/symbols/: arithmetic.rs  gf_tables.rs  mod.rs
src/system/: equation.rs  mod.rs
src/tests/: mod.rs
